<resources>
    <string name="app_name">colortetris</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="rotateclockwise">rotateclockwise</string>
    <string name="counterclockwiserotate">counterclockwiserotate</string>
    <string name="shiftleft">shiftleft</string>
    <string name="shiftdown">shiftdown</string>
    <string name="gameboard">gameboard</string>
    <string name="shiftright">shiftright</string>
    <string name="score">score</string>
    <string name="textview">TextView</string>
    <string name="leaderboard">leaderboard</string>
    <string name="generate">generate</string>
    <string name="play">Play</string>
    <string name="menubutton">menubutton</string>
    <string name="scoreShow">Score :</string>
    <string name="speed_slow">Speed: Slow</string>
    <string name="allow_game_requests">Allow Game Requests</string>
    <string name="speed_moderate">Speed: Moderate</string>
    <string name="speed_fast">Speed: Fast</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="wrench">wrench</string>
    <string name="sign_in">Sign in</string>
    <string name="singleplayer">singleplayer</string>
    <string name="color_tetris">color tetris</string>
    <string name="multiplayer">multiplayer</string>
    <string name="setting">setting</string>
    <string name="go">Go</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="username_email">username/email</string>
</resources>
